# practic

./: CMakeLists.txt
Laba1/: CMakeLists.txt
Laba1/Task1/: CMakeLists.txt  Task1.c
Laba1/Task2/: CMakeLists.txt  Task2.c
Laba1/Task3/: CMakeLists.txt  Task3.c
Laba1/Task4/: CMakeLists.txt  Task4.c
Laba1/Task5/: CMakeLists.txt  Task5_func.c  Task5_main.c
Laba1/Task6/: CMakeLists.txt  Task6_func.c  Task6_main.c
Laba1/Task7/: CMakeLists.txt  Task7_func.c  Task7_main.c  func.h
Laba1/Task8/: CMakeLists.txt
Laba2/: CMakeLists.txt
Laba2/Task1/: CMakeLists.txt
Laba2/Task1/Include/: func.h
Laba2/Task1/src_exe/: CMakeLists.txt  main1.c
Laba2/Task1/src_lib_1/: CMakeLists.txt  f1.c
Laba2/Task1/src_lib_2/: CMakeLists.txt  f2.c
Laba3/: CMakeLists.txt
Laba3/Laba3/: CMakeLists.txt
Laba3/Laba3/Include/: f.h
Laba3/Laba3/src_exe/: CMakeLists.txt  main.c
Laba3/Laba3/src_lib_do_while/: CMakeLists.txt  func.c
Laba3/Laba3/src_lib_for/: CMakeLists.txt  func.c
Laba3/Laba3/src_lib_while/: CMakeLists.txt  func.c
Laba4/: CMakeLists.txt
Laba4/Laba4/: CMakeLists.txt
Laba4/Laba4/Task1/: CMakeLists.txt
Laba4/Laba4/Task1/Includes/: f.h
Laba4/Laba4/Task1/src_exe/: CMakeLists.txt  main.c
Laba4/Laba4/Task1/src_lib/: CMakeLists.txt  func.c
Laba4/Laba4/Task2/src_exe/: CMakeLists.txt  main.c
Laba4/Laba4/Task2/src_lib/: CMakeLists.txt  readArray.c  sort.c  sortStackArray.c  writeArray.c
Laba5/: CMakeLists.txt
Laba5/Laba5/: CMakeLists.txt
Laba5/Laba5/src_exe/: CMakeLists.txt  main.c
Laba5/Laba5/src_lib/: CMakeLists.txt  task1.c  task2.c  task3.c  task4.c  task5.c  task6.c
Laba6/: CMakeLists.txt
Laba6/Laba6/: CMakeLists.txt  Laba6.c
Laba7/: CMakeLists.txt
Laba7/Laba7/: CMakeLists.txt
Laba7/Laba7/Task1/Includes/: f.h
Laba7/Laba7/Task1/src_exe/: CMakeLists.txt  main.c
Laba7/Laba7/Task1/src_lib/: CMakeLists.txt  func.c
Laba7/Laba7/Task2/Includes/: f.h
Laba7/Laba7/Task2/src_exe/: CMakeLists.txt  main.c
Laba7/Laba7/Task2/src_lib/: CMakeLists.txt  readArray.c  sort.c  sortHeapArray.c  writeArray.c
Laba7/Laba7/Task3/: CMakeLists.txt
Laba7/Laba7/Task3/Includes/: f.h
Laba7/Laba7/Task3/src_exe/: CMakeLists.txt  main.c
Laba7/Laba7/Task3/src_lib/: CMakeLists.txt  delete.c  find.c  insert.c  strcat.c  strcpy.c
