# CMakeList.txt: проект CMake для Laba3; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_subdirectory("src_lib_for")
add_subdirectory("src_lib_while")
add_subdirectory("src_lib_do_while")
add_subdirectory("src_exe")
